--- a/ui/html/pages/create.tmpl
+++ b/ui/html/pages/create.tmpl
@@ -2,6 +2,7 @@
 
 {{define "main"}}
 <form action='/snippets' method='POST'>
+    <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
     <div>
         <label>Title:</label>
         {{with .Form.FieldErrors.title}}
